# GenCameraDriver

./: .gitignore  CMakeLists.txt  GenCameraDriver.cpp  GenCameraDriver.h  GenCameraDriver.hpp  GenCameraDriverImpl.cpp  LinuxSocket.hpp  NPPJpegCoder.cpp  NPPJpegCoder.h  README.md  RealCameraDriver.cpp  RealCameraDriver.h  main.cpp
FileCamera/: FileCamera.cpp  FileCamera.h  ffmpeg_usage.txt
PointGrey/: PointGreyCamera.cpp  PointGreyCamera.h
SKEncoder/: .gitignore  CMakeLists.txt  H265Convert.sh  SKCommon.hpp  SKEncoder.cpp  SKEncoder.h  main.cpp
SKEncoder/NvEncoder/NvEncoder/: NvEncoderCuda.cpp  NvEncoderCuda.h
SKEncoder/NvEncoder/Utils/: NvCodecUtils.h  NvEncoderCLIOptions.h
Shell/: batch_download.sh  download.sh  key231  key232
Stereo/: DisparityProcessor.cu  DisparityProcessor.h  ExposureFusion.cpp  ExposureFusion.cu  ExposureFusion.h  StereoCamera.cpp  StereoCamera.h  StereoRectify.cpp  StereoRectify.h  config_file_sample.ini
Stereo/RealTimeDepth/: CMakeLists.txt  DepthMapUpdater.cpp  DepthMapUpdater.h  GhostElemer.cpp  GhostElemer.h  depthmap.cpp  depthmap.h  oflow.h  run_dense.cpp
Tools/: batch_download.sh  download.sh  server.txt
Tools/Decoder/: CMakeLists.txt  Exceptions.h  main.cpp  test.sh
Tools/Socket/: .gitignore
Tools/Socket/CSharpClient/: GigaDataRecord.sln
Tools/Socket/CSharpClient/Client/: Client.csproj  Program.cs
Tools/Socket/CSharpClient/Client/Properties/: AssemblyInfo.cs
Tools/Socket/UbuntuServer/: CMakeLists.txt  main.cpp
XIMEA/: XIMEACamera.cpp  XIMEACamera.h
cuda/: NPPJpegCoderKernel.cu  NPPJpegCoderKernel.h
